--- a/analysis/data.Rmd
+++ b/analysis/data.Rmd
@@ -60,6 +60,27 @@ gwas_detail <- gwas_detail[c(setdiff(names(gwas_detail), "ID"), "ID")]
 DT::datatable(gwas_detail,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','GWAS selected from ukb+finn meta'),options = list(pageLength = 10) )
 ```
 
+### Munro's traits
+
+https://zenodo.org/records/3629742#.XjCh9OF7m90
+
+
+```{r}
+
+gtex <- data.table::fread("/project/xinhe/xsun/multi_group_ctwas/data/gwas/gwas_metadata_gtex.txt")
+
+gwas_selected_gtex <- readxl::read_excel("/project/xinhe/xsun/multi_group_ctwas/data/gwas/gwas_selected.xlsx",sheet = 4)
+
+gwas_detail <- merge(gwas_selected_gtex, gtex, by.x = "ID", by.y = "Tag", all.x = TRUE)
+gwas_detail <- gwas_detail[match(gwas_selected_gtex$traits,gwas_detail$traits),]
+gwas_detail <- gwas_detail[c(setdiff(names(gwas_detail), "ID"), "ID")]
+
+gwas_detail <- gwas_detail[,c("trait_category","sub_category","traits","abbreviation.x","Consortium","PUBMED_Paper_Link","Phenotype","Sample_Size","Population","ID")]
+
+DT::datatable(gwas_detail,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;',"Munro's GWAS"),options = list(pageLength = 10) )
+```
+
+
 ### TGFM
 
 ```{r}
